tests/integration/fixtures/laugh/error/클래스가_아닌_대상_상속.laugh
변수 x = 10;
클래스 Robot : x { }
